Fix for date picker div visible in repo view. WCM-752

--- a/web-app/_weceem/css/contentRepository.css
+++ b/web-app/_weceem/css/contentRepository.css
@@ -72,3 +72,9 @@ span.loadingMessage {
   color: red;
   text-decoration: underline;
 }
+
+.ui-datepicker {
+    display: none;
+}
+
+
